@@ -1,3 +1,12 @@
+2008-07-16  Kasper Peeters  <kasper.peeters@aei.mpg.de>
+
+	* Fixed scrolling behaviour of the GUI once more...
+
+	* Fixed a bug in prodcollectnum which would touch the tree above
+	the entry point and thereby broke subtle cases of substitute which
+	relied on the entry point containing a zero multiplier for
+	vanishing terms (see test 6 in defaults.cdb).
+
 2008-07-07  Kasper Peeters  <kasper.peeters@aei.mpg.de>
 
 	* Released 0.139
